Enable lint run on python 3.12 (GitHub CI)

--- a/.github/workflows/types-fork.yml
+++ b/.github/workflows/types-fork.yml
@@ -41,7 +41,7 @@ jobs:
         ENV_PREFIX=$(tr -C -d "0-9" <<< "${{ matrix.python-version }}")
         TOXENV=$(tox --listenvs | grep "^py$ENV_PREFIX" | tr '\n' ',') tox
     - name: Run lint
-      if: ${{ matrix.python-version == '3.9' }}
+      if: ${{ matrix.python-version == '3.9' || matrix.python-version == '3.12' }}
       run: |
         tox -e lint
     - name: Upload coverage to Codecov
