--- a/tox.ini
+++ b/tox.ini
@@ -24,9 +24,15 @@ commands =
     black . --check
     isort . --check --dif
     flake8 crispy_forms tests
-    mypy crispy_forms
 deps =
     -rrequirements/lint.txt
+
+[testenv:typechecking]
+skip_install = true
+commands =
+    mypy crispy_forms
+deps =
+    -rrequirements/typechecking.txt
 
 [flake8]
 exclude =
