--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,6 +42,9 @@ jobs:
       if: ${{ matrix.python-version == '3.9' }}
       run: |
         tox -e lint
+    - name: Run type checking
+      run: |
+        tox -e typechecking
 
   deploy:
     runs-on: ubuntu-latest
