--- a/.github/workflows/types-fork.yml
+++ b/.github/workflows/types-fork.yml
@@ -44,6 +44,9 @@ jobs:
       if: ${{ matrix.python-version == '3.9' || matrix.python-version == '3.12' }}
       run: |
         tox -e lint
+    - name: Run type checking
+      run: |
+        tox -e typechecking
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
